# syrup

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-analyzer.json
lib/rexa-netlayers/: Cargo.toml
lib/rexa-netlayers/src/: datastream.rs  lib.rs  mock.rs  onion.rs
lib/rexa-netlayers/src/datastream/: tcp.rs  unix.rs
lib/rexa-proc/: Cargo.toml
lib/rexa-proc/src/: attr.rs  deliver.rs  deliver_only.rs  export.rs  input.rs  lib.rs
lib/syrup/: Cargo.toml
lib/syrup-derive/: Cargo.toml
lib/syrup-derive/src/: common.rs  de.rs  decode.rs  encode.rs  lib.rs  ser.rs
lib/syrup-derive/src/common/: container.rs  conversion.rs  error.rs  field.rs  inner.rs
lib/syrup-ed25519/: Cargo.toml
lib/syrup-ed25519/src/: lib.rs  signature.rs  test.rs  verifying_key.rs
lib/syrup-proc/: Cargo.toml
lib/syrup-proc/src/: lib.rs
lib/syrup/src/: async_stream.rs  de.rs  error.rs  lib.rs  ser.rs  syrup_types.rs
lib/syrup/src/async_stream/: ser.rs
lib/syrup/src/de/: byte_deserializer.rs  impl_deserialize.rs  parse.rs  stream.rs  visitor.rs
lib/syrup/src/extra/: ed25519.rs
lib/syrup/src/ser/: byte_serializer.rs  impl_serialize.rs  pretty_serializer.rs
lib/syrup/src/serde/: de.rs  ser.rs
src/: async_compat.rs  bytes.rs  captp.rs  de.rs  error.rs  extra.rs  lib.rs  locator.rs  netlayer.rs  optional_collection.rs  optional_map.rs  ser.rs  serde.rs  symbol.rs  syrup.pest  syrup_test.rs  syrup_types.rs
src/bytes/: array.rs  bytes_ty.rs
src/captp/: msg.rs  object.rs  session.rs
src/captp/msg/: abort.rs  start_session.rs
src/captp/object/: bootstrap.rs
src/captp/session/: builder.rs  core.rs  error.rs  event.rs  export_token.rs  internal.rs  keymap.rs  manager.rs  message_queue.rs  registry.rs  resolver.rs  traits.rs
src/de/: byte_deserializer.rs  cursor.rs  error.rs  group.rs  impl_decode.rs  impl_deserialize.rs  lex.rs  literal.rs  tokens.rs  visitor.rs
src/de/cursor/: nom.rs
src/de/impl_decode/: test.rs
src/de/lex/: collection.rs  literal.rs  test.rs
src/de/lex/collection/: test.rs
src/de/lex/literal/: int.rs  test.rs
src/de/tokens/: stream.rs  tree.rs
src/extra/: ed25519.rs
src/locator/: onion.rs
src/netlayer/: datastream.rs  mock.rs  onion.rs  tcpip.rs
src/netlayer/datastream/: tokio_extras.rs
src/ser/: impl_encode.rs  pretty_serializer.rs  serde.rs
src/ser/impl_encode/: test.rs
src/symbol/: symbol_ty.rs
tests/: deliver.rs  ocapn-test-suite.rs  ocapn_test_suite.rs  proc.rs  session.rs  stage_0.rs
tests/common/: mod.rs  netlayers.rs
