[workspace]
members = ["lib/*"]

[workspace.package]
authors = ["Ash Walker <ash@ashwalker.net>"]
repository = "https://github.com/SignalWalker/rexa"
license = "LGPL-3.0-or-later"

[package]
name = "rexa"
version = "0.1.0"
edition = "2021"
authors.workspace = true

rust-version = "1.76" # TODO :: check whether rexa compiles with earlier versions of rust

description = "An implementation of OCapN, a protocol for secure peer-to-peer networking."
readme = true
repository.workspace = true
license.workspace = true

categories = [
  "asynchronous",
  "authentication",
  "concurrency",
  "cryptography",
  "network-programming",
]
keywords = ["ocap", "ocapn", "object-capabilities"]


[dependencies]
rexa-proc = { path = "./lib/rexa-proc" }

# meta
thiserror = "^1.0"
tracing = "^0.1"

crossbeam = { version = "^0.8" }

futures = { version = "^0.3" }
tokio = { version = "^1.36", optional = true, default-features = false, features = [
  "io-util",
  "sync",
] }

# captp
dashmap = { version = "^5" }
## crypto
rand = { version = "^0.8", features = [] }
ed25519-dalek = { version = "^2", features = ["rand_core"] }

# locators
# url = "^2.4"

# syrup
syrup = { path = "lib/syrup" }

# netlayers
# netlayer-mock
lazy_static = { version = "^1.4", optional = true }
## netlayer-onion
arti-client = { version = "^0.14", git = "https://gitlab.torproject.org/tpo/core/arti", features = [
  "onion-service-client",
  "onion-service-service",
], optional = true }
tor-rtcompat = { version = "^0.10", git = "https://gitlab.torproject.org/tpo/core/arti", optional = true }
tor-hsservice = { version = "^0.8", git = "https://gitlab.torproject.org/tpo/core/arti", optional = true }
tor-cell = { version = "^0.16", git = "https://gitlab.torproject.org/tpo/core/arti", optional = true }
tor-hscrypto = { version = "^0.6", git = "https://gitlab.torproject.org/tpo/core/arti", optional = true }

[dev-dependencies]
proptest = { version = "^1.4" }
lazy_static = { version = "^1.4" }

tracing-subscriber = { version = "^0.3", features = [
  "time",
  "env-filter",
  "parking_lot",
  "local-time",
  "json",
] }
time = { version = "^0.3", features = ["formatting", "local-offset", "macros"] }

[build-dependencies]

[features]
default = ["extra-diagnostics"]
extra-diagnostics = []
tokio = ["dep:tokio", "tor-rtcompat?/tokio"]
netlayer-mock = ["dep:lazy_static"]
netlayer-datastream = ["tokio?/net"]
netlayer-onion = [
  "dep:arti-client",
  "dep:tor-rtcompat",
  "dep:tor-hsservice",
  "dep:tor-cell",
]
test-deps = ["tokio", "tokio/rt-multi-thread", "tokio/process", "tokio/macros"]


[[test]]
name = "ocapn_test_suite"
required-features = ["netlayer-onion", "test-deps"]

[[test]]
name = "session"
required-features = ["netlayer-mock", "test-deps"]

[[test]]
name = "deliver"
required-features = ["netlayer-mock", "test-deps"]
