[package]
name = "rexa-netlayers"
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rexa = { path = "../.." }
syrup = { path = "../syrup", optional = true }

thiserror = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

futures.workspace = true
parking_lot.workspace = true
tokio = { version = "^1.36", optional = true, features = ["parking_lot"] }

# mock
lazy_static = { version = "^1.4", optional = true }
# onion
arti-client = { version = "^0.14", git = "https://gitlab.torproject.org/tpo/core/arti", features = [
  "onion-service-client",
  "onion-service-service",
], optional = true }
tor-rtcompat = { version = "^0.10", git = "https://gitlab.torproject.org/tpo/core/arti", optional = true }
tor-hsservice = { version = "^0.8", git = "https://gitlab.torproject.org/tpo/core/arti", optional = true }
tor-cell = { version = "^0.16", git = "https://gitlab.torproject.org/tpo/core/arti", optional = true }


[features]
default = []
mock = ["tokio", "dep:lazy_static"]
datastream = ["dep:syrup", "dep:thiserror", "dep:tracing"]
datastream-tcp = ["datastream", "tokio", "tokio/net"]
datastream-unix = ["datastream", "tokio"]
onion = [
  "dep:arti-client",
  "dep:tor-rtcompat",
  "dep:tor-hsservice",
  "dep:tor-cell",
  "tokio",
  "tor-rtcompat/tokio",
]

tokio = ["dep:tokio", "rexa/tokio"]

[lints]
workspace = true
