[package]
name = "syrup-derive"
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2", features = ["full", "printing", "extra-traits"] }
quote = "^1"
proc-macro2 = "^1"
thiserror = "^1"

[lints]
workspace = true
