[package]
name = "syrup-proc"
version = "0.1.0"
edition = "2021"
publish.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2", features = ["full", "printing", "extra-traits"] }
quote = "^1"
proc-macro2 = "^1"

[lints]
workspace = true
