[package]
name = "syrup"
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# meta
thiserror = "^1.0"

syrup-proc = { path = "../syrup-proc" }
syrup-derive = { path = "../syrup-derive" }

nom = { version = "^7.1" }
ibig = { version = "^0.3", default-features = false, features = [
  "std",
  "num-traits",
] }

# async stream
futures = { version = "^0.3", optional = true }

# serde
serde = { version = "^1.0", optional = true }

# extra
ed25519-dalek = { version = "^2", optional = true }

[dev-dependencies]
proptest = { version = "^1.4" }
lazy_static = { version = "^1.4" }

[features]
default = ["extra-ed25519"]
async-stream = ["dep:futures"]
# serde = ["dep:serde"]
extra-ed25519 = ["dep:ed25519-dalek"]
